practices/observability/samples/pgsql/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: observability
  name: observ-postgres
  labels:
    type: clusterip-service
spec:
  type: ClusterIP
  ports:
    - name: db
      port: 5432
      targetPort: 5432
      protocol: TCP
    - name: exporter
      port: 9187
      protocol: TCP
      targetPort: 9187
  selector:
    app: observ-postgres
