practices/observability/samples/pgsql/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observ-pgsql-prom-exporter
  namespace: observability
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /observ-prom-exporter-pgsql(.*)
            pathType: Prefix
            backend:
              service:
                name: observ-postgres
                port: 
                  number: 9187
